<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="u_continue_as_guest_u">Continue as Guest</string>
    <string name="facebook_app_id">183518692255558</string>
    <string name="com.twitter.sdk.android.CONSUMER_KEY">r59jTevJfWg6YDGldRGiks8Rl</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">MQAQtngew0imjGduM3mEbWE1fdUbGOekYEcvm0ybCoJy5FUrju</string>
    <string name="app_name">Selal</string>
    <string name="login_url">http://selal.com/login/login.php</string>
    <string name="no_more_images">No nore images</string>
    <!--<string name="product_url">http://www.selal.com/api/products?display=full&ws_key=11111111111111111111111111111111?url=products&ws_key=11111111111111111111111111111111&limit=10.10</string>-->
    <string name="products_list_url">http://www.selal.com/api/products?display=full&amp;ws_key=11111111111111111111111111111111?url=products&amp;ws_key=11111111111111111111111111111111<!--&amp;limit=--></string>
    <array name="categories">

        <item>Wedding anniversary</item>
        <item>B2B corporate gifts</item>
        <item>Birthday</item>
        <item>Football night</item>
        <item>From Kuwait to you</item>
        <item>Get well soon</item>
        <item>Graduation</item>
        <item>I love you</item>
        <item>I\'m sorry</item>
        <item>Birth of new baby</item>
        <item>Promotion</item>
        <item>Suits all occasions</item>
        <item>Sympathy</item>
        <item>Thank you</item>
        <item>Wedding day surprise</item>
        <item>Engagement</item>
    </array>
    <array name="ids_of_categories">
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>

    </array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="addresses">https://www.selal.com/api/addresses/?filter[id_customer]=</string>
    <string name="orders_list">https://www.selal.com/api/orders/?filter[id_customer]=</string>
    <string name="reminders_list">http://www.selal.com/modules/kgmreminder/get_customer_reminders.php?id=</string>
    <string name="fogot_pass_url">http://www.selal.com/login/forgotpassword.php</string>
    <string name="signup_url">https://www.selal.com/api/customers/?ws_key=11111111111111111111111111111111</string>
    <string name="occasions_list_url">http://www.selal.com/modules/kgmreminder/get_occasions.php</string>
    <string name="relations_list_url">http://www.selal.com/modules/kgmreminder/get_relations.php</string>
    <string name="add_reminder_url">http://www.selal.com/modules/kgmreminder/add_reminder.php</string>
    <string name="customer_update_url">https://www.selal.com/login/update-customer.php</string>
    <string name="addresses_new_url">https://www.selal.com/api/addresses?ws_key=11111111111111111111111111111111&amp;output_format=JSON</string>
    <string name="get_countires_url">https://www.selal.com/api/countries?ws_key=11111111111111111111111111111111&amp;display=full&amp;output_format=JSON</string>
    <string name="design_baskets_url">https://www.selal.com/api/products/?filter[id_category_default]=[32]&amp;ws_key=11111111111111111111111111111111&amp;output_format=JSON&amp;display=[id,name,id_default_image,price]</string>
    <string name="category_items_url">https://www.selal.com/api/products/?filter[id_category_default]=[</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="occasion">Occasion</string>
    <string name="date">Date</string>
    <string name="name">Name</string>
    <string name="relation">Relation</string>
    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="all_products">All products</string>
    <string name="email_address">Email address</string>
    <string name="reset_password">Reset password</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="connect_with">Connect with</string>
    <string name="sign_up">Sign up</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="password_previous">Password(previous)</string>
    <string name="update_information">Update your info</string>
    <string name="add_new_address">Add new address</string>
    <string name="order_history_and_tracking">Order history &amp; tracking</string>
    <string name="add_new_reminder">My Reminder</string>
    <string name="e_g_mother_father_sister_brother_etc">e.g., mother, father, sister, brother, etc</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="save">Save</string>
    <string name="gift_by_ocassions">Gift by occasions</string>
    <string name="design_your_basket">Design your basket</string>
    <string name="shop_now">Pay &amp; Checkout</string>
    <string name="your_shopping_cart_is_empty">Your shopping cart is empty</string>
    <string name="all_addresses">All addresses</string>
    <string name="my_reminders">My reminders</string>
    <string name="my_address">My address</string>
    <string name="my_account">My account</string>
    <string name="update">Update</string>
    <string name="contact_us">Contact Selal</string>
    <string name="login">Register</string>
    <string name="delete">Delete</string>
    <string name="my_reminder">My reminder</string>
    <string name="choose_category">Choose category</string>
    <string name="shopping_cart">Shopping cart</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="image_base_url">https://www.selal.com/api/images/products/</string>
    <string name="checkout">Checkout</string>
    <string name="next">Next</string>
    <string name="progress_text">please wait</string>
    <string name="shipment_method">Shipping method</string>
    <string name="select_basket">Select basket</string>
    <string name="live_help">Live help</string>
    <string name="sign_out">Sign out</string>
    <string name="title">Delete</string>
    <string name="content">Are you sure, you want to delete this item?</string>
    <string name="agree">Yes</string>
    <string name="disagree">Cancel</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="language">ENGLISH</string>
    <string name="language_selection">Select your Language</string>
</resources>