<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/mini_logo"
            android:title="@string/home" />
        <item
            android:id="@+id/update_info"
            android:icon="@drawable/person_icon"
            android:title="@string/update_information" />
        <item
            android:id="@+id/address"
            android:icon="@drawable/location_icon"
            android:title="@string/add_new_address" />
        <item
            android:id="@+id/order"
            android:icon="@drawable/order_icon"
            android:title="@string/order_history_and_tracking" />
        <item
            android:id="@+id/reminder"
            android:icon="@drawable/reminders"
            android:title="@string/add_new_reminder" />
        <item
            android:id="@+id/help"
            android:icon="@drawable/ic_help_name"
            android:title="@string/live_help" />
        <item
            android:id="@+id/contact"
            android:icon="@drawable/contact_icon"
            android:title="@string/contact_us"
            />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/sign_out"
            android:title="@string/sign_out"
            />
    </group>

<!--    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>-->

</menu>
