<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal|center"
    android:background="@android:color/white"
    >

    <ImageView
        android:layout_marginTop="8dp"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/user"
        android:id="@+id/user_image"
        />
    <TextView
        android:layout_marginTop="8dp"

        android:id="@+id/user_image_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_information"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
         />
    <ImageView
        android:layout_width="48dp"
        android:layout_marginTop="8dp"

        android:layout_height="48dp"
        android:src="@drawable/alladdresses"
        android:id="@+id/all_addresses_image"
        />
    <TextView
        android:layout_marginTop="8dp"

        android:id="@+id/all_addresses_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_addresses"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        />
    <ImageView
        android:layout_width="48dp"
        android:layout_marginTop="8dp"

        android:layout_height="48dp"
        android:src="@drawable/order_history"
        android:id="@+id/order_history_image"
        />
    <TextView
        android:id="@+id/order_history_txt"
        android:layout_marginTop="8dp"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_history_and_tracking"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        />
    <ImageView
        android:layout_width="48dp"
        android:layout_marginTop="8dp"

        android:layout_height="48dp"
        android:src="@drawable/reminders"
        android:id="@+id/reminder_image"
        />
    <TextView
        android:layout_marginTop="8dp"

        android:id="@+id/reminder_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_reminder"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        />
    <ImageView
        android:layout_width="48dp"
        android:layout_marginTop="8dp"

        android:layout_height="48dp"
        android:src="@drawable/livehelp"
        android:id="@+id/live_image"
        />
    <TextView
        android:layout_marginTop="8dp"

        android:id="@+id/livehelp_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/live_help"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        />
    <ImageView
        android:layout_width="48dp"
        android:layout_marginTop="8dp"

        android:layout_height="48dp"
        android:src="@drawable/signout"
        android:id="@+id/signout"

        />
    <TextView
        android:layout_marginTop="8dp"

        android:id="@+id/signout_tct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_out"
        android:textStyle="bold"

        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        />

</LinearLayout>
</ScrollView>