<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddAddresses"
    android:background="@android:color/white"
    >
    <com.github.ybq.android.spinkit.SpinKitView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/spin_kit"
        style="@style/SpinKitView.Large.FadingCircle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        app:SpinKit_Color="@color/colorAccent" />
    <ImageView
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:layout_marginTop="32dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/first_image"
        android:src="@drawable/logo"
        android:layout_marginBottom="8dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        android:gravity="center_vertical|center_horizontal"
        android:id="@+id/login_layout"
        android:paddingLeft="48dp"
        android:paddingRight="48dp"
        android:paddingTop="16dp"
        android:layout_above="@id/bottom_navigation"
        android:layout_below="@id/first_image"


        >
        <EditText
            android:id="@+id/alias"
            android:layout_width="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_top_bg"
            android:padding="10dp"
            android:hint="@string/e_g_mother_father_sister_brother_etc"
            android:singleLine="true"
            android:drawablePadding="12dp"
            android:textColorHint="#bbbbbb"
             />
        <EditText
            android:id="@+id/first_name"
            android:layout_centerHorizontal="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_top_bg"
            android:layout_marginTop="-2dp"
            android:padding="10dp"
            android:drawablePadding="16dp"
            android:hint="@string/first_name"
            android:textColorHint="#bbbbbb"
            android:singleLine="true"
            />
        <EditText
            android:id="@+id/last_name"
            android:layout_centerHorizontal="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_top_bg"
            android:layout_marginTop="-2dp"
            android:padding="10dp"
            android:drawablePadding="16dp"
            android:hint="@string/last_name"
            android:textColorHint="#bbbbbb"
            android:singleLine="true"
            />
        <EditText
            android:id="@+id/address"
            android:layout_centerHorizontal="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_top_bg"
            android:layout_marginTop="-2dp"
            android:padding="10dp"
            android:drawablePadding="16dp"
            android:hint="@string/address"
            android:textColorHint="#bbbbbb"
            android:singleLine="true"
            />
        <Spinner
            android:id="@+id/country"
            android:layout_centerHorizontal="true"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/edittext_top_bg"
            android:layout_marginTop="-2dp"
            android:padding="10dp"
            android:drawablePadding="16dp"
            android:hint="Select Country"
            android:textColorHint="#bbbbbb"
            />
        <EditText
            android:id="@+id/phone"
            android:layout_centerHorizontal="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_top_bg"
            android:layout_marginTop="-2dp"
            android:padding="10dp"
            android:drawablePadding="16dp"
            android:hint="@string/phone"
            android:textColorHint="#bbbbbb"
            android:singleLine="true"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/passwd_et"
            android:layout_centerHorizontal="true"
            android:text="@string/save"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:textAllCaps="false"
            android:background="@drawable/selector_for_button"


            android:textColor="@android:color/white"
            android:id="@+id/add_address_btn"
            android:layout_marginTop="16dp"
            />
    </LinearLayout>

    <com.aurelhubert.ahbottomnavigation.AHBottomNavigation
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_gravity="bottom"
        app:elevation="8dp"
        app:menu="@menu/menu_navigation"
        android:layout_alignParentBottom="true"

        />
</RelativeLayout>
