<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@android:color/white"
    >
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:id="@+id/main_layot"
        >

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/cart"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_shopping_cart_is_empty"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            style="@style/Base.TextAppearance.AppCompat.Headline"
            />

    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/cart_recycerview"
        android:layout_above="@+id/checkout"
        />


    <Button
        android:layout_width="200dp"
        android:id="@+id/shopnow"
        android:layout_height="wrap_content"
        android:text="@string/shop_now"
        android:background="@drawable/selector_for_button"
        android:textColor="@android:color/white"
        android:textAllCaps="false"
        android:layout_marginTop="32dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="64dp"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/checkout"
        android:background="@drawable/selector_for_button"
        android:textColor="@android:color/white"
        android:textAllCaps="false"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="8dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/checkout"
        />
</RelativeLayout>