<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Signup"
    android:background="@android:color/white"
    >

    <com.github.ybq.android.spinkit.SpinKitView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/spin_kit"
        style="@style/SpinKitView.Large.Circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        app:SpinKit_Color="@color/colorAccent" />
    <ImageView
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:layout_marginTop="32dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/first_image"
        android:src="@drawable/logo"
        />
    <!--    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email_et"
            android:layout_below="@id/first_image"
            android:layout_centerHorizontal="true"
            android:hint="Email"
            android:layout_marginRight="64dp"
            android:layout_marginLeft="64dp"
            android:layout_marginTop="8dp"

            android:drawableLeft="@drawable/email"
            android:drawablePadding="16dp"
            android:background="@drawable/edittext_top_bg"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_marginRight="64dp"
            android:layout_marginLeft="64dp"
            android:textColorHint="#bbbbbb"


            android:hint="Password"
            android:layout_height="wrap_content"
            android:id="@+id/passwd_et"
            android:layout_below="@id/email_et"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:background="@drawable/edittext_top_bg"
            />-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        android:gravity="center_vertical|center_horizontal"
        android:layout_centerInParent="true"
        android:id="@+id/login_layout"
        android:paddingLeft="48dp"
        android:paddingRight="48dp"
        android:paddingTop="16dp"

        >
        <EditText
            android:id="@+id/first_name"
            android:layout_width="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_top_bg"
            android:singleLine="true"
            android:padding="10dp"
            android:hint="@string/first_name"
            android:drawablePadding="12dp"
            android:textColorHint="#bbbbbb"
            android:drawableLeft="@drawable/ic_user"/>
        <EditText
            android:id="@+id/last_name"
            android:layout_centerHorizontal="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_top_bg"
            android:layout_marginTop="-2dp"
            android:padding="10dp"
            android:singleLine="true"
            android:drawablePadding="16dp"
            android:hint="@string/last_name"
            android:textColorHint="#bbbbbb"

            android:drawableLeft="@drawable/ic_user"/>
        <EditText
            android:id="@+id/email"
            android:layout_centerHorizontal="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_top_bg"
            android:singleLine="true"
            android:layout_marginTop="-2dp"
            android:padding="10dp"
            android:drawablePadding="16dp"
            android:hint="@string/email_address"
            android:textColorHint="#bbbbbb"

            android:drawableLeft="@drawable/email"/>
        <EditText
            android:id="@+id/passwd"
            android:layout_centerHorizontal="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_top_bg"
            android:singleLine="true"
            android:layout_marginTop="-2dp"
            android:padding="10dp"
            android:drawablePadding="16dp"
            android:hint="@string/password"
            android:textColorHint="#bbbbbb"
            android:password="true"
            android:drawableLeft="@drawable/password"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/passwd_et"
            android:layout_centerHorizontal="true"
            android:text="@string/sign_up"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:textAllCaps="false"
            android:background="@drawable/selector_for_button"


            android:textColor="@android:color/white"
            android:id="@+id/signin_btn"
            android:layout_marginTop="16dp"
            />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/login_layout"
        android:id="@+id/continue_as_guest"
        android:layout_marginTop="8dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect_with"
        android:id="@+id/connect_with"
        android:visibility="gone"
        android:layout_below="@id/continue_as_guest"
        android:layout_centerHorizontal="true"

        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:visibility="gone"
        android:layout_below="@+id/connect_with"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fb_btn"
            android:src="@drawable/fb"
            android:onClick="loginButtonFB"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/twitter_btn"
            android:src="@drawable/twitter"
            android:onClick="loginButtonTwitter"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/linkedin_btn"
            android:src="@drawable/linked"
            android:onClick="loginButtonLinken"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/googleplus_btn"
            android:src="@drawable/google"
            android:onClick="loginButtonGoogle"
            />


    </LinearLayout>
</RelativeLayout>
