<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.UpdateUser"
    android:background="@android:color/white"
    >
    <com.github.ybq.android.spinkit.SpinKitView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/spin_kit"
        style="@style/SpinKitView.Large.FadingCircle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        app:SpinKit_Color="@color/colorAccent" />
    <ImageView
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:layout_marginTop="32dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/first_image"
        android:src="@drawable/logo"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        android:gravity="center_vertical|center_horizontal"
        android:layout_centerInParent="true"
        android:layout_above="@id/bottom_navigation"
        android:layout_below="@id/first_image"
        android:id="@+id/login_layout"
        android:paddingLeft="48dp"
        android:paddingRight="48dp"
        android:paddingTop="16dp"

        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Your personal Information"
            android:layout_marginBottom="8dp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            />
        <EditText
            android:id="@+id/first_name"
            android:layout_width="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_top_bg"
            android:singleLine="true"
            android:editable="false"
            android:padding="10dp"
            android:hint="@string/first_name"
            android:drawablePadding="12dp"
            android:textColorHint="#bbbbbb"
            android:drawableLeft="@drawable/ic_user"/>
        <EditText
            android:id="@+id/last_name"
            android:layout_centerHorizontal="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_top_bg"
            android:layout_marginTop="-2dp"
            android:singleLine="true"
            android:editable="false"
            android:padding="10dp"
            android:drawablePadding="16dp"
            android:hint="@string/last_name"
            android:textColorHint="#bbbbbb"
            android:drawableLeft="@drawable/ic_user"/>
        <EditText
            android:id="@+id/email"
            android:layout_centerHorizontal="true"
            android:editable="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_top_bg"
            android:layout_marginTop="-2dp"
            android:padding="10dp"
            android:singleLine="true"
            android:drawablePadding="16dp"
            android:hint="@string/email_address"
            android:textColorHint="#bbbbbb"

            android:drawableLeft="@drawable/email"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email"
            android:layout_centerHorizontal="true"
            android:text="@string/next"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:background="@drawable/selector_for_button"

            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:id="@+id/update_button"
            android:layout_marginTop="16dp"
            />
    </LinearLayout>


    <com.aurelhubert.ahbottomnavigation.AHBottomNavigation
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_gravity="bottom"
        app:elevation="8dp"
        app:menu="@menu/menu_navigation"
        android:layout_alignParentBottom="true"

        />
</RelativeLayout>
